export type ToolType = "select" | "draw" | "move";
